--- a/Auctions.ipynb
+++ b/Auctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tipos = {\"platform\":np.uint8, \"ref_type_id\":np.uint8, \"source_id\":np.uint8, \"device_id\":np.uint64}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auctions = pd.concat((x for x in pd.read_csv('../../data/auctions.csv.gzip', chunksize=50000, compression='gzip', low_memory=False, dtype=tipos, parse_dates=[\"date\"], usecols=[\"date\", \"platform\", \"ref_type_id\", \"source_id\", \"device_id\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +54,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>auction_type_id</th>\n",
-       "      <th>country</th>\n",
        "      <th>date</th>\n",
        "      <th>device_id</th>\n",
        "      <th>platform</th>\n",
@@ -47,51 +63,41 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6333597102633388268</td>\n",
-       "      <td>2019-03-11 14:18:33.290763</td>\n",
-       "      <td>6059599345986491085</td>\n",
+       "      <th>10253065</th>\n",
+       "      <td>2019-03-09 08:25:11.437518</td>\n",
+       "      <td>3297550689811632561</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6333597102633388268</td>\n",
-       "      <td>2019-03-11 14:18:34.440157</td>\n",
-       "      <td>1115994996230693426</td>\n",
+       "      <th>16336286</th>\n",
+       "      <td>2019-03-07 10:04:28.833838</td>\n",
+       "      <td>6563262339938107154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18544555</th>\n",
+       "      <td>2019-03-12 23:52:27.248792</td>\n",
+       "      <td>211440781987761210</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6333597102633388268</td>\n",
-       "      <td>2019-03-11 14:18:35.862360</td>\n",
-       "      <td>7463856250762200923</td>\n",
+       "      <th>2720013</th>\n",
+       "      <td>2019-03-12 23:16:21.548646</td>\n",
+       "      <td>8140114989184617405</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6333597102633388268</td>\n",
-       "      <td>2019-03-11 14:18:36.167163</td>\n",
-       "      <td>7829815350267792040</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6333597102633388268</td>\n",
-       "      <td>2019-03-11 14:18:37.728590</td>\n",
-       "      <td>1448534231953777480</td>\n",
+       "      <th>524301</th>\n",
+       "      <td>2019-03-12 19:15:07.428539</td>\n",
+       "      <td>3589183094373511767</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -101,34 +107,33 @@
        "</div>"
       ],
       "text/plain": [
-       "   auction_type_id              country                        date  \\\n",
-       "0              NaN  6333597102633388268  2019-03-11 14:18:33.290763   \n",
-       "1              NaN  6333597102633388268  2019-03-11 14:18:34.440157   \n",
-       "2              NaN  6333597102633388268  2019-03-11 14:18:35.862360   \n",
-       "3              NaN  6333597102633388268  2019-03-11 14:18:36.167163   \n",
-       "4              NaN  6333597102633388268  2019-03-11 14:18:37.728590   \n",
+       "                               date            device_id  platform  \\\n",
+       "10253065 2019-03-09 08:25:11.437518  3297550689811632561         1   \n",
+       "16336286 2019-03-07 10:04:28.833838  6563262339938107154         1   \n",
+       "18544555 2019-03-12 23:52:27.248792   211440781987761210         1   \n",
+       "2720013  2019-03-12 23:16:21.548646  8140114989184617405         1   \n",
+       "524301   2019-03-12 19:15:07.428539  3589183094373511767         1   \n",
        "\n",
-       "             device_id  platform  ref_type_id  source_id  \n",
-       "0  6059599345986491085         1            1          0  \n",
-       "1  1115994996230693426         1            1          0  \n",
-       "2  7463856250762200923         1            1          0  \n",
-       "3  7829815350267792040         1            1          0  \n",
-       "4  1448534231953777480         1            1          0  "
+       "          ref_type_id  source_id  \n",
+       "10253065            1          0  \n",
+       "16336286            1          5  \n",
+       "18544555            1          0  \n",
+       "2720013             1          1  \n",
+       "524301              1          0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "auctions = pd.read_csv(\"auctions.csv\", low_memory=False)\n",
-    "auctions.head()"
+    "auctions.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,16 +142,14 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 19571319 entries, 0 to 19571318\n",
-      "Data columns (total 7 columns):\n",
-      "auction_type_id    float64\n",
-      "country            int64\n",
-      "date               object\n",
-      "device_id          int64\n",
-      "platform           int64\n",
-      "ref_type_id        int64\n",
-      "source_id          int64\n",
-      "dtypes: float64(1), int64(5), object(1)\n",
-      "memory usage: 1.0+ GB\n"
+      "Data columns (total 5 columns):\n",
+      "date           datetime64[ns]\n",
+      "device_id      uint64\n",
+      "platform       uint8\n",
+      "ref_type_id    uint8\n",
+      "source_id      uint8\n",
+      "dtypes: datetime64[ns](1), uint64(1), uint8(3)\n",
+      "memory usage: 354.6 MB\n"
      ]
     }
    ],
@@ -432,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
