--- a/TP2/Auctions.ipynb
+++ b/TP2/Auctions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,91 +396,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>device_id</th>\n",
-       "      <th>ref_type_id</th>\n",
-       "      <th>source_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-04-23 18:58:00.842116</th>\n",
-       "      <td>2564673204772915246</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-23 18:58:01.530771</th>\n",
-       "      <td>4441121667607578179</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-23 18:58:01.767562</th>\n",
-       "      <td>7721769811471055264</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-23 18:58:02.363468</th>\n",
-       "      <td>6416039086842158968</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-23 18:58:02.397559</th>\n",
-       "      <td>1258642015983312729</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      device_id  ref_type_id  source_id\n",
-       "date                                                                   \n",
-       "2019-04-23 18:58:00.842116  2564673204772915246            1          0\n",
-       "2019-04-23 18:58:01.530771  4441121667607578179            7          0\n",
-       "2019-04-23 18:58:01.767562  7721769811471055264            1          0\n",
-       "2019-04-23 18:58:02.363468  6416039086842158968            1          0\n",
-       "2019-04-23 18:58:02.397559  1258642015983312729            1          0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "types = {'device_id': np.uint64, 'ref_type_id': np.uint8, 'source_id': np.uint8}\n",
     "auctions = pd.read_csv('data/auctions.csv.gzip', compression='gzip', low_memory=False, dtype=types,\n",
@@ -676,7 +594,7 @@
    ],
    "source": [
     "# Ordenamos el índice para acelerar las operaciones\n",
-    "auctions.sort_index()"
+    "auctions = auctions.sort_index()"
    ]
   },
   {
