--- a/TP2/Events.ipynb
+++ b/TP2/Events.ipynb
@@ -36,12 +36,12 @@
    "outputs": [],
    "source": [
     "# Columnas a eliminar:\n",
-    "# 'index', 'ref_hash', 'device_countrycode', 'session_user_agent', 'trans_id', 'event_uuid'\n",
+    "# 'index', 'device_countrycode', 'session_user_agent', 'trans_id', 'event_uuid'\n",
     "# Columnas a utilizar:\n",
-    "cols = [ 'date', 'event_id', 'ref_type', 'application_id', 'attributed',\n",
-    "            'device_countrycode', 'device_os_version', 'device_brand',\n",
-    "            'device_model', 'device_city', 'user_agent', 'carrier', 'kind',\n",
-    "            'device_os', 'wifi' ,'connection_type', 'ip_address', 'device_language' ]"
+    "cols = [ 'date', 'event_id', 'ref_hash', 'ref_type', 'application_id', 'attributed',\n",
+    "         'device_os_version', 'device_brand', 'device_model', 'device_city',\n",
+    "         'user_agent', 'carrier', 'kind', 'device_os', 'wifi',\n",
+    "         'connection_type', 'ip_address', 'device_language' ]"
    ]
   },
   {
@@ -72,8 +72,8 @@
        "      <th></th>\n",
        "      <th>event_id</th>\n",
        "      <th>ref_type</th>\n",
+       "      <th>ref_hash</th>\n",
        "      <th>application_id</th>\n",
-       "      <th>attributed</th>\n",
        "      <th>...</th>\n",
        "      <th>wifi</th>\n",
        "      <th>connection_type</th>\n",
@@ -98,8 +98,8 @@
        "      <th>2019-04-20 01:42:49.120</th>\n",
        "      <td>0</td>\n",
        "      <td>1891515180541284343</td>\n",
+       "      <td>5857744372586891366</td>\n",
        "      <td>210</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -110,8 +110,8 @@
        "      <th>2019-04-20 01:42:49.340</th>\n",
        "      <td>1</td>\n",
        "      <td>1891515180541284343</td>\n",
+       "      <td>7642521036780133571</td>\n",
        "      <td>210</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -122,8 +122,8 @@
        "      <th>2019-04-20 01:42:49.365</th>\n",
        "      <td>1</td>\n",
        "      <td>1891515180541284343</td>\n",
+       "      <td>2548841562898283198</td>\n",
        "      <td>210</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -134,8 +134,8 @@
        "      <th>2019-04-20 01:42:51.438</th>\n",
        "      <td>2</td>\n",
        "      <td>1891515180541284343</td>\n",
+       "      <td>609402887625919085</td>\n",
        "      <td>210</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -146,8 +146,8 @@
        "      <th>2019-04-20 01:42:51.838</th>\n",
        "      <td>1</td>\n",
        "      <td>1891515180541284343</td>\n",
+       "      <td>9114651763556439823</td>\n",
        "      <td>210</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -160,21 +160,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                         event_id             ref_type  application_id  \\\n",
-       "date                                                                     \n",
-       "2019-04-20 01:42:49.120         0  1891515180541284343             210   \n",
-       "2019-04-20 01:42:49.340         1  1891515180541284343             210   \n",
-       "2019-04-20 01:42:49.365         1  1891515180541284343             210   \n",
-       "2019-04-20 01:42:51.438         2  1891515180541284343             210   \n",
-       "2019-04-20 01:42:51.838         1  1891515180541284343             210   \n",
+       "                         event_id             ref_type             ref_hash  \\\n",
+       "date                                                                          \n",
+       "2019-04-20 01:42:49.120         0  1891515180541284343  5857744372586891366   \n",
+       "2019-04-20 01:42:49.340         1  1891515180541284343  7642521036780133571   \n",
+       "2019-04-20 01:42:49.365         1  1891515180541284343  2548841562898283198   \n",
+       "2019-04-20 01:42:51.438         2  1891515180541284343   609402887625919085   \n",
+       "2019-04-20 01:42:51.838         1  1891515180541284343  9114651763556439823   \n",
        "\n",
-       "                         attributed  ...   wifi  connection_type  \\\n",
-       "date                                 ...                           \n",
-       "2019-04-20 01:42:49.120       False  ...  False              NaN   \n",
-       "2019-04-20 01:42:49.340       False  ...  False              NaN   \n",
-       "2019-04-20 01:42:49.365       False  ...  False              NaN   \n",
-       "2019-04-20 01:42:51.438       False  ...  False              NaN   \n",
-       "2019-04-20 01:42:51.838       False  ...  False              NaN   \n",
+       "                         application_id  ...   wifi  connection_type  \\\n",
+       "date                                     ...                           \n",
+       "2019-04-20 01:42:49.120             210  ...  False              NaN   \n",
+       "2019-04-20 01:42:49.340             210  ...  False              NaN   \n",
+       "2019-04-20 01:42:49.365             210  ...  False              NaN   \n",
+       "2019-04-20 01:42:51.438             210  ...  False              NaN   \n",
+       "2019-04-20 01:42:51.838             210  ...  False              NaN   \n",
        "\n",
        "                                  ip_address  device_language  \n",
        "date                                                           \n",
@@ -209,23 +209,23 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "DatetimeIndex: 7744581 entries, 2019-04-20 01:42:49.120000 to 2019-04-23 00:01:13.518000\n",
       "Data columns (total 17 columns):\n",
-      "event_id              int64\n",
-      "ref_type              int64\n",
-      "application_id        int64\n",
-      "attributed            bool\n",
-      "device_countrycode    int64\n",
-      "device_os_version     float64\n",
-      "device_brand          float64\n",
-      "device_model          float64\n",
-      "device_city           float64\n",
-      "user_agent            float64\n",
-      "carrier               float64\n",
-      "kind                  float64\n",
-      "device_os             float64\n",
-      "wifi                  bool\n",
-      "connection_type       object\n",
-      "ip_address            int64\n",
-      "device_language       float64\n",
+      "event_id             int64\n",
+      "ref_type             int64\n",
+      "ref_hash             int64\n",
+      "application_id       int64\n",
+      "attributed           bool\n",
+      "device_os_version    float64\n",
+      "device_brand         float64\n",
+      "device_model         float64\n",
+      "device_city          float64\n",
+      "user_agent           float64\n",
+      "carrier              float64\n",
+      "kind                 float64\n",
+      "device_os            float64\n",
+      "wifi                 bool\n",
+      "connection_type      object\n",
+      "ip_address           int64\n",
+      "device_language      float64\n",
       "dtypes: bool(2), float64(9), int64(5), object(1)\n",
       "memory usage: 960.2+ MB\n"
      ]
@@ -733,23 +733,23 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "DatetimeIndex: 7744581 entries, 2019-04-20 01:42:49.120000 to 2019-04-23 00:01:13.518000\n",
       "Data columns (total 17 columns):\n",
-      "event_id              uint16\n",
-      "ref_type              uint8\n",
-      "application_id        uint8\n",
-      "attributed            bool\n",
-      "device_countrycode    int64\n",
-      "device_os_version     uint8\n",
-      "device_brand          uint16\n",
-      "device_model          uint16\n",
-      "device_city           uint16\n",
-      "user_agent            uint16\n",
-      "carrier               uint16\n",
-      "kind                  uint16\n",
-      "device_os             uint8\n",
-      "wifi                  bool\n",
-      "connection_type       category\n",
-      "ip_address            uint16\n",
-      "device_language       uint16\n",
+      "event_id             uint16\n",
+      "ref_type             uint8\n",
+      "ref_hash             int64\n",
+      "application_id       uint8\n",
+      "attributed           bool\n",
+      "device_os_version    uint8\n",
+      "device_brand         uint16\n",
+      "device_model         uint16\n",
+      "device_city          uint16\n",
+      "user_agent           uint16\n",
+      "carrier              uint16\n",
+      "kind                 uint16\n",
+      "device_os            uint8\n",
+      "wifi                 bool\n",
+      "connection_type      category\n",
+      "ip_address           uint16\n",
+      "device_language      uint16\n",
       "dtypes: bool(2), category(1), int64(1), uint16(9), uint8(4)\n",
       "memory usage: 302.8 MB\n"
      ]
