Agregado chequeo de coeficientes y cálculo de métricas

--- a/TP2/sklearn.ipynb
+++ b/TP2/sklearn.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "from sklearn import linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn import metrics\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -936,11 +936,89 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coefficient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>application_id</th>\n",
+       "      <td>1.557787e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ref_hash</th>\n",
+       "      <td>-4.206456e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>attributed</th>\n",
+       "      <td>1.257263e-36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>implicit</th>\n",
+       "      <td>-9.609524e-35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>device_countrycode</th>\n",
+       "      <td>2.028013e-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ip_address</th>\n",
+       "      <td>3.641746e-17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Coefficient\n",
+       "application_id      1.557787e-31\n",
+       "ref_hash           -4.206456e-17\n",
+       "attributed          1.257263e-36\n",
+       "implicit           -9.609524e-35\n",
+       "device_countrycode  2.028013e-14\n",
+       "ip_address          3.641746e-17"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeff_df = pd.DataFrame(reg.coef_, ventana_1.columns, columns=['Coefficient'])  \n",
+    "coeff_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/plain": [
        "((128688, 6), (32173, 6), (128688,), (32173,))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,31 +1029,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "pred=reg.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "255212.4737655301"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred.max()"
    ]
   },
   {
@@ -986,10 +1044,30 @@
     {
      "data": {
       "text/plain": [
-       "(32173,)"
+       "255212.4737655301"
       ]
      },
      "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32173,)"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1148,7 @@
        "Name: label, Length: 32173, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,24 +1166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "28461.64078441799"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 8552.11367300059\n",
+      "Mean Squared Error: 810064996.1412456\n",
+      "Root Mean Squared Error: 28461.640784417992\n"
+     ]
     }
    ],
    "source": [
-    "# Square mean square error\n",
-    "mean_squared_error(y_test,pred)**0.5\n",
-    "# np.mean((pred-y_test)**2)"
+    "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, pred))  \n",
+    "print('Mean Squared Error:', metrics.mean_squared_error(y_test, pred))  \n",
+    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, pred)))"
    ]
   },
   {
@@ -1119,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2976,7 +3053,7 @@
        "[160617 rows x 19 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2990,7 +3067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2999,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3197,7 +3274,7 @@
        "4  2437566759560000641     8.441417e+18  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3209,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3253,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4343,7 +4420,7 @@
        "[160617 rows x 11 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4355,7 +4432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4387,7 +4464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4396,7 +4473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4405,7 +4482,7 @@
        "((160617, 11), (160617,))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4416,7 +4493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4426,16 +4503,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg2=linear_model.LinearRegression()\n"
+    "reg2=linear_model.LinearRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4447,7 +4524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4456,18 +4533,121 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg2.fit(X2_train,y2_train)\n"
+    "reg2.fit(X2_train,y2_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coefficient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ref_hash</th>\n",
+       "      <td>1.750382e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>application_id</th>\n",
+       "      <td>-4.200259e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>attributed</th>\n",
+       "      <td>7.426117e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>implicit</th>\n",
+       "      <td>1.836204e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>device_countrycode</th>\n",
+       "      <td>2.032107e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>device_brand</th>\n",
+       "      <td>1.728625e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>device_model</th>\n",
+       "      <td>1.331197e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wifi</th>\n",
+       "      <td>3.241203e-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ip_address</th>\n",
+       "      <td>-4.248717e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>device_language</th>\n",
+       "      <td>3.521285e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label1</th>\n",
+       "      <td>7.200229e-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Coefficient\n",
+       "ref_hash            1.750382e-17\n",
+       "application_id     -4.200259e-05\n",
+       "attributed          7.426117e-06\n",
+       "implicit            1.836204e-05\n",
+       "device_countrycode  2.032107e-03\n",
+       "device_brand        1.728625e-17\n",
+       "device_model        1.331197e-17\n",
+       "wifi                3.241203e-08\n",
+       "ip_address         -4.248717e-18\n",
+       "device_language     3.521285e-17\n",
+       "label1              7.200229e-01"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeff_df = pd.DataFrame(reg2.coef_, data2.columns, columns=['Coefficient'])  \n",
+    "coeff_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4476,7 +4656,7 @@
        "((128493, 11), (32124, 11), (128493,), (32124,))"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4487,7 +4667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4496,22 +4676,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16972.09292009813"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 3476.0400350828036\n",
+      "Mean Squared Error: 317688813.50674367\n",
+      "Root Mean Squared Error: 17823.827128502555\n"
+     ]
     }
    ],
    "source": [
-    "mean_squared_error(y2_test,pred2)**0.5\n"
+    "print('Mean Absolute Error:', metrics.mean_absolute_error(y2_test, pred2))  \n",
+    "print('Mean Squared Error:', metrics.mean_squared_error(y2_test, pred2))  \n",
+    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y2_test, pred2)))"
    ]
   }
  ],
@@ -4531,7 +4712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
