se borro y se volvio agregar un archivo conflictivo

--- a/TP2/sklearn1.ipynb
+++ b/TP2/sklearn1.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "from sklearn import linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -1114,93 +1114,11 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Coefficient</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>application_id</th>\n",
-       "      <td>1.557787e-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ref_hash</th>\n",
-       "      <td>-4.206456e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>attributed</th>\n",
-       "      <td>1.257263e-36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>implicit</th>\n",
-       "      <td>-9.609524e-35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>device_countrycode</th>\n",
-       "      <td>2.028013e-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ip_address</th>\n",
-       "      <td>3.641746e-17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-<<<<<<< HEAD
-       "                     Coefficient\n",
-       "application_id      1.557787e-31\n",
-       "ref_hash           -4.206456e-17\n",
-       "attributed          1.257263e-36\n",
-       "implicit           -9.609524e-35\n",
-       "device_countrycode  2.028013e-14\n",
-       "ip_address          3.641746e-17"
-=======
        "((128688, 7), (32173, 7), (128688,), (32173,))"
->>>>>>> Se probaron varias cosas para predecir
       ]
      },
      "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coeff_df = pd.DataFrame(reg.coef_, ventana_1.columns, columns=['Coefficient'])  \n",
-    "coeff_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((128688, 6), (32173, 6), (128688,), (32173,))"
-      ]
-     },
-     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1147,7 @@
        "255212.47376553007"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1167,7 @@
        "(32173,)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1248,7 @@
        "Name: label, Length: 32173, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,23 +1266,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 8552.11367300059\n",
-      "Mean Squared Error: 810064996.1412456\n",
-      "Root Mean Squared Error: 28461.640784417992\n"
-     ]
+     "data": {
+      "text/plain": [
+       "28461.64078441799"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, pred))  \n",
-    "print('Mean Squared Error:', metrics.mean_squared_error(y_test, pred))  \n",
-    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, pred)))"
+    "# Square mean square error\n",
+    "mean_squared_error(y_test,pred)**0.5\n",
+    "# np.mean((pred-y_test)**2)"
    ]
   },
   {
@@ -1378,11 +1297,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 28,
-=======
    "execution_count": 27,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1391,11 +1306,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 29,
-=======
    "execution_count": 28,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,11 +1316,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 30,
-=======
    "execution_count": 84,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -3371,11 +3278,7 @@
        "[225863 rows x 37 columns]"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 30,
-=======
      "execution_count": 84,
->>>>>>> Se probaron varias cosas para predecir
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3390,11 +3293,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 31,
-=======
    "execution_count": 30,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3403,11 +3302,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 32,
-=======
    "execution_count": 31,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -3605,11 +3500,7 @@
        "4  2437566759560000641     8.441417e+18  "
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 32,
-=======
      "execution_count": 31,
->>>>>>> Se probaron varias cosas para predecir
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3621,11 +3512,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 33,
-=======
    "execution_count": 32,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -3667,11 +3554,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 34,
-=======
    "execution_count": 33,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -4512,11 +4395,7 @@
        "[160617 rows x 8 columns]"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 34,
-=======
      "execution_count": 33,
->>>>>>> Se probaron varias cosas para predecir
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4528,11 +4407,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 35,
-=======
    "execution_count": 34,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -4561,11 +4436,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 36,
-=======
    "execution_count": 35,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4574,11 +4445,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 37,
-=======
    "execution_count": 36,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -4587,11 +4454,7 @@
        "((160617, 8), (160617,))"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 37,
-=======
      "execution_count": 36,
->>>>>>> Se probaron varias cosas para predecir
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4602,11 +4465,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 38,
-=======
    "execution_count": 37,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4616,24 +4475,16 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 39,
-=======
    "execution_count": 38,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg2=linear_model.LinearRegression()"
+    "reg2=linear_model.LinearRegression()\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 40,
-=======
    "execution_count": 39,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4645,11 +4496,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 41,
-=======
    "execution_count": 40,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -4658,129 +4505,18 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reg2.fit(X2_train,y2_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Coefficient</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>ref_hash</th>\n",
-       "      <td>1.750382e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>application_id</th>\n",
-       "      <td>-4.200259e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>attributed</th>\n",
-       "      <td>7.426117e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>implicit</th>\n",
-       "      <td>1.836204e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>device_countrycode</th>\n",
-       "      <td>2.032107e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>device_brand</th>\n",
-       "      <td>1.728625e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>device_model</th>\n",
-       "      <td>1.331197e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wifi</th>\n",
-       "      <td>3.241203e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ip_address</th>\n",
-       "      <td>-4.248717e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>device_language</th>\n",
-       "      <td>3.521285e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>label1</th>\n",
-       "      <td>7.200229e-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Coefficient\n",
-       "ref_hash            1.750382e-17\n",
-       "application_id     -4.200259e-05\n",
-       "attributed          7.426117e-06\n",
-       "implicit            1.836204e-05\n",
-       "device_countrycode  2.032107e-03\n",
-       "device_brand        1.728625e-17\n",
-       "device_model        1.331197e-17\n",
-       "wifi                3.241203e-08\n",
-       "ip_address         -4.248717e-18\n",
-       "device_language     3.521285e-17\n",
-       "label1              7.200229e-01"
-      ]
-     },
-     "execution_count": 42,
-=======
      "execution_count": 40,
->>>>>>> Se probaron varias cosas para predecir
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coeff_df = pd.DataFrame(reg2.coef_, data2.columns, columns=['Coefficient'])  \n",
-    "coeff_df"
+    "reg2.fit(X2_train,y2_train)\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 43,
-=======
    "execution_count": 41,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [
     {
@@ -4789,11 +4525,7 @@
        "((128493, 8), (32124, 8), (128493,), (32124,))"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 43,
-=======
      "execution_count": 41,
->>>>>>> Se probaron varias cosas para predecir
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4804,11 +4536,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 44,
-=======
    "execution_count": 42,
->>>>>>> Se probaron varias cosas para predecir
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4817,19 +4545,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 3476.0400350828036\n",
-      "Mean Squared Error: 317688813.50674367\n",
-      "Root Mean Squared Error: 17823.827128502555\n"
-     ]
-=======
    "execution_count": 56,
    "metadata": {},
    "outputs": [
@@ -4863,13 +4578,10 @@
      "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
->>>>>>> Se probaron varias cosas para predecir
     }
    ],
    "source": [
-    "print('Mean Absolute Error:', metrics.mean_absolute_error(y2_test, pred2))  \n",
-    "print('Mean Squared Error:', metrics.mean_squared_error(y2_test, pred2))  \n",
-    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y2_test, pred2)))"
+    "mean_squared_error(y2_test,pred2)**0.5\n"
    ]
   },
   {
@@ -5969,7 +5681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
