se actualizo xgboost para installs

--- a/TP2/xgboostConFeatures-installs.ipynb
+++ b/TP2/xgboostConFeatures-installs.ipynb
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ventana_ultima = installs['2019-04-24':'2019-04-26'].reset_index()"
+    "ventana_ultima = installs['2019-04-24':'2019-04-26'].reset_index().groupby('ref_hash').agg({'created' : 'min'})"
    ]
   },
   {
